# lib/db/src/schema/index.ts
@@ -11,3 +11,4 @@ export * from "./audit-logs";
 export * from "./documents";
 export * from "./dkmo_memberships";
 export * from "./welfare";
+export * from "./job-bureau";
